<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2012 Google Inc. All rights reserved.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">One Tap XP Booster</string>

    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="google_status_fmt">User: %s</string>
    <string name="google_title_text">One Tap XP Booster</string>


    <string name="app_details">User : billgates@apple.com </string>

    <string name="game_title">XP Booster!</string>
    <string name="game_blurb">You are <b>few seconds away</b>\nto won <b>Max XP</b> to your Account.</string>
    <string name="single_player_explanation">Get XP to Maxx</string>
    <string name="invite_players_explanation">Your Leaderboard</string>
    <string name="see_invitations_explanation">Your Achievements</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>

</resources>