<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/main_layout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/white">

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="329dp"
            android:layout_height="108dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/firebase_lockup_400"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Just A Tap Away! Pay and Get XP Boosted!"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_marginTop="20dp"
            android:text="@string/app_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>

    <Button
            android:id="@+id/leaderboard"
            style="@style/MainScreenButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" android:background="@drawable/achieve"
            app:layout_constraintBottom_toBottomOf="@+id/homeLogo" app:layout_constraintEnd_toStartOf="@+id/instagram"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/instagram" app:layout_constraintVertical_bias="0.75"/>

    <TextView
            android:id="@+id/textView4"
            style="@style/MainScreenButtonBlurb"
            android:layout_marginTop="8dp"
            android:text="@string/invite_players_explanation"
            android:textColor="#060707" app:layout_constraintEnd_toEndOf="@+id/leaderboard"
            app:layout_constraintStart_toStartOf="@+id/leaderboard"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard"/>

    <TextView
            android:id="@+id/textView3"
            style="@style/MainScreenButtonBlurb"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="8dp" android:text="@string/see_invitations_explanation"
            android:textColor="#060707" app:layout_constraintEnd_toEndOf="@+id/achievement"
            app:layout_constraintStart_toStartOf="@+id/achievement"
            app:layout_constraintTop_toBottomOf="@+id/achievement"/>


    <Button
            android:id="@+id/achievement"
            style="@style/MainScreenButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" android:background="@drawable/achievemnet_google_play_games_png"
            app:layout_constraintBottom_toTopOf="@+id/homeLogo" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toEndOf="@+id/instagram" app:layout_constraintTop_toTopOf="@+id/instagram"
            app:layout_constraintVertical_bias="0.75"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/signOutAndDisconnect1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status" app:layout_constraintVertical_bias="0.696"/>

    <Button
            android:id="@+id/instagram"
            style="@style/MainScreenButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/instagram_new" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status"/>

    <TextView
            android:id="@+id/textViewIG"
            style="@style/MainScreenButtonBlurb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="FollowUs On Instagram\n to unlock some Achievement" android:textColor="#060707"
            app:layout_constraintEnd_toEndOf="@+id/instagram" app:layout_constraintStart_toStartOf="@+id/instagram"
            app:layout_constraintTop_toBottomOf="@+id/instagram"/>


    <ImageView
            android:id="@+id/homeLogo"
            android:layout_width="184dp"
            android:layout_height="171dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/signOutAndDisconnect1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status"
            app:srcCompat="@mipmap/ic_launcher_round"/>

    <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_width="0dp"
            android:layout_height="886dp"
            android:visibility="gone"
            tools:ignore="MissingConstraints"
            tools:text="Firebase User ID: 123456789abc"/>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signOutAndDisconnect1"
            android:layout_width="0dp"
            android:layout_height="93dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.common.SignInButton
                android:id="@+id/signInButton"
                android:layout_width="286dp"
                android:layout_height="53dp"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/signOutAndDisconnect"
                android:layout_width="399dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">


            <Button
                    android:id="@+id/signOutButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="165dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/signed_out"
                    android:textColor="@color/ButtonTextColor"
                    android:theme="@style/Base.Theme.MaterialComponents.Dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/disconnectButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <Button
                    android:id="@+id/disconnectButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:text="Get More XP"
                    android:textColor="@color/ButtonTextColor"
                    android:theme="@style/Base.Theme.MaterialComponents.Dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/signOutButton"
                    app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>